Kubernetes/11_networkpolicy/allow-web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowwebserver
  namespace: schulung2
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: webserver
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
